# berdl_notebook

./: CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.base3.5  README.md  build.gradle.kts  pyproject.toml
.github/workflows/: README.md  base-image.yml  build_base.yml  build_base_image.yml  build_child.yml  build_child_image.yml  docker-image.yml
base/: README.md  build.gradle.kts  pyproject.toml
child/: Dockerfile
child/configs/: environment.yaml
child/configs/extensions/: favorites.jupyterlab-settings  favorites.jupyterlab-settings-root
child/configs/ipython_startup/: 00-startup.py  02-get_minio_client.py  README.md
child/scripts/: entrypoint.sh
configs/: environment.yaml  jupyter_lab_config.py  requirements.txt
configs/docker_statcks_hooks/: 99-copy-skel.sh
configs/extensions/: favorites.json  favorites.jupyterlab-settings
configs/ipython_startup/: 00-startup.py  01-get_cts_client.py  01-setup-cts-client.py  02-setup-spark-client.py  03-setup-spark-client.py  03-setup-spark-utils.py  04-generate-warnings.py  04-setup-spark-utils.py  05_notebook_utils.py  README.md
configs/jupyter_docker_stacks_hooks/: 10-setup_env.sh  11-setup_bash_and_dirs.sh  11-setup_env.sh  12-delete_jovyan.sh  12-setup_favorites.sh  99-cleanup.sh  99-copy-skel.sh  99-setup_bash_and_dirs.sh  README.md
configs/minio/: 11-setup_bash_and_dirs.sh  12-setup_favorites.sh
configs/skel/: .bash_aliases  .bash_profile  .bashrc  .custom_profile
dev/: README.md  requirements-dev.txt
local_dev/: README.md
scripts/: entrypoint.sh
